add update to tidy pairwise operations post

--- a/content/post/2019-12-28-iceland-day-2-golden-circle-snowmobiling.Rmd
+++ b/content/post/2019-12-28-iceland-day-2-golden-circle-snowmobiling.Rmd
@@ -4,7 +4,7 @@ author: Bryan Shalloway
 date: '2019-12-28'
 slug: iceland-day-2-golden-circle-snowmobiling
 categories:
-  - trave
+  - travel
 tags:
   - iceland
   - travel
